# video-forge-pro

./: .gitignore  BUILD.md  CHANGELOG.md  COMPARISON_REPORT.md  FFMPEG_INSTALL.md  IMPLEMENTATION_STATUS.md  LICENSE  PERFORMANCE_OPTIMIZATIONS.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_AR.md  README.md  README_AR.md  build_all.bat  pubspec.yaml
cpp/: CMakeLists.txt  build.bat
cpp/include/: video_processor.h
cpp/src/: video_processor.cpp  video_processor_cli.cpp
lib/: main.dart
lib/core/theme/: app_theme.dart
lib/models/: app_settings.dart  editor_settings.dart  music_track.dart  outro_clip.dart  processing_job.dart  timeline.dart  video_clip.dart  video_project.dart
lib/providers/: app_providers.dart
lib/screens/: home_screen.dart  preview_editor_screen.dart  settings_screen.dart  split_video_screen.dart  timeline_editor_screen.dart
lib/services/: database_service.dart  file_import_service.dart  timeline_service.dart  video_processing_service.dart  video_processing_service_cli.dart
lib/services/ffi/: video_processing_ffi.dart
lib/widgets/: navigation_sidebar.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
